Fix java issues